--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-fastapi
-uvicorn
-torch
-timm
-albumentations
-opencv-python-headless
-pillow
-numpy
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
+torch==2.3.0
+torchvision==0.18.0
+timm==1.0.3
+albumentations==1.4.4
+opencv-python-headless==4.9.0.80
+pillow==10.3.0
+numpy==1.26.4
+
 
